# mcp-screener

./: .env.example  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-30-screener-mcp-implementation.md
docs/superpowers/specs/: 2026-06-30-screener-mcp-design.md
screener_mcp/: __init__.py  __main__.py  client.py  login.py  server.py
tests/: conftest.py  test_client.py  test_server.py
