[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "screener-mcp"
version = "0.1.0"
description = "MCP server for Screener.in financial data (Indian stock market)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
screener-mcp = "screener_mcp.__main__:main"
